# apple-health

./: .gga  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.config/opencode/: opencode.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
dashboard/: backend.py  eslint.config.js  index.html  package-lock.json  package.json  requirements.txt  test_backend.py
dashboard/src/: main.jsx  metricCatalog.js  styles.css
dashboard/src/lib/: metricAnalysis.js  metricAnalysis.test.js
docs/architecture/: README.md
docs/architecture/decisions/: 0001-use-a-modular-monolith.md  0002-use-a-react-spa.md  0003-deploy-with-compose-on-a-single-host.md  0004-separate-operational-and-analytical-storage.md  0005-govern-future-health-pattern-guidance.md  0006-gate-private-dashboard-publication.md
examples/: health-auto-export-v2.json
openspec/: config.yaml
openspec/changes/evaluate-prudent-health-pattern-guidance/: design.md  exploration.md  proposal.md  tasks.md  verify-report.md
openspec/changes/migrate-daily-summaries-to-operational-sqlite/: design.md  proposal.md  tasks.md
openspec/changes/recover-dashboard-documentation/: design.md  exploration.md  proposal.md  tasks.md  verify-report.md
scripts/: check_conventions.py  check_repository.py  test_check_repository.py
src/: __init__.py  app.py  maintenance.py  storage.py  storage_schema.py
tests/: test_app.py  test_health_guidance_governance.py  test_maintenance.py  test_storage.py  test_storage_schema.py
(+10 files in other folders)
