[project]
name = "apple-health-pipeline"
version = "0.2.1"
requires-python = ">=3.12"
dependencies = [
  "duckdb==1.4.3",
  "fastapi==0.128.0",
  "pyarrow==22.0.0",
  "uvicorn[standard]==0.40.0",
]

[project.optional-dependencies]
test = ["httpx==0.28.1", "pytest==9.0.2"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests", "dashboard"]
